* Fixed issue that was not allowing descriptions to take up their ful height, causing a scrollbar in the editor.

--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -241,9 +241,10 @@ table.compact-table {
    /*min-height: 50px;*/
 }
 
-.prosemirror .editor-container .editor-content {
-   position: relative !important;
+.prosemirror .editor-container .editor-content, prose-mirror .editor-content {
+   position: relative;
 }
+
 /* Dialog footer buttons */
 .standard-form .form-footer > button {
    line-height: 1;
